sjengida/c1/s_rook_mobility
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/s_rook_mobility/src/seval.c:530:7: error: use of undeclared identifier 'dword_66359C'
v4 = &dword_66359C[square]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/s_rook_mobility/src/obj/seval.o] Error 1
